Ticket #565 (new defect)

Opened 3 years ago

Last modified 2 years ago

Disc probing

Reported by: dionoea Assigned to:
Priority: low Milestone: Features paradize
Component: LibVLC Version: master
Severity: minor Keywords:
Cc: Platform(s): all
Difficulty: easy Work status: Not started

Description (Last modified by zorglub)

Put some nice code for probing in the core. Use it in the interfaces and for services discovery

Change History

24/02/06 09:03:58 changed by zorglub

I don't agree about the timeline.

I think we should just fix forcing of default drive at the moment, and clean that up for 0.8.6

04/03/06 10:35:20 changed by zorglub

  • milestone changed from 0.8.5-test1 to 0.8.5-test2.

04/03/06 10:48:04 changed by zorglub

Should be fixed. Please check

07/03/06 23:53:04 changed by tumu

  • priority changed from normal to low.
  • severity changed from normal to minor.

08/03/06 00:35:07 changed by tumu

  • component set to wxWidgets interface.

11/03/06 16:56:17 changed by zorglub

  • description changed.
  • milestone changed from 0.8.5-test2 to 0.8.6 features freeze.

05/06/06 16:17:34 changed by zorglub

  • description changed.
  • include_gantt changed.
  • summary changed from DVD disc probing to Disc probing.
  • dependencies changed.
  • due_assign changed.
  • due_close changed.

09/06/06 12:07:37 changed by zorglub

  • component changed from wxWidgets interface to LibVLC.

20/06/06 22:54:17 changed by zorglub

(In [15932]) Non-working general declarations for disc probing (Refs:#565)

19/11/06 17:07:00 changed by zorglub

  • milestone changed from 0.9.0 features freeze to Features paradize.