Non-working general declarations for disc probing (Refs:#565)